Added test cases for Book and Category entities, covering repository, service, and controller layers.